# Aniya-Studio

./: .gitignore  README.md  READMEzh.md  start.sh
htmlslide/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
htmlslide/backend/src/: config.py  main.py
htmlslide/backend/src/api/: chat.py  deps.py  export.py  file.py  project.py  router.py  settings.py  skills.py  version.py
htmlslide/backend/src/constants/: error_codes.py
htmlslide/backend/src/middleware/: error_handler.py
htmlslide/backend/src/models/: schemas.py
htmlslide/backend/src/repositories/: file_repo.py  version_repo.py
htmlslide/backend/src/services/: agent_client.py  pdf_exporter.py  pptx_exporter.py  project_service.py  sse_bridge.py  (+1 more)
htmlslide/backend/tests/: conftest.py  test_agent_client.py  test_agent_client_skills.py  test_atomic.py  test_chat_api.py  test_chat_skill_integration.py  test_config.py  test_coverage_gaps.py  test_deps_helpers.py  test_error_handler.py  test_error_handler_edge.py  test_export_api.py  test_file_api.py  test_file_helpers.py  test_file_repo.py  test_html_parser.py  test_lifespan_coverage.py  test_main_app.py  test_pdf_export.py  test_pptx_export.py  test_project_api.py  test_project_api_edges.py  test_project_service.py  test_remaining_edges.py  test_resilience.py  test_security.py  test_serve_uploads.py  test_sit.py  test_skills_api.py  test_smoke.py  test_sse_bridge.py  test_sse_bridge_edge.py  test_sse_bridge_robust.py  test_version_api.py  test_version_api_edge.py  test_version_repo.py  test_version_repo_edge.py  test_workspace.py
(+388 files in other folders)
